--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto mu-navbar-nav">
                         <li class="nav-item active"><a href="#"}>主页</a></li>
+						<li class="nav-item"><a href="Watch">Watch</a></li>
                         <li class="nav-item"><a href="static/1/index.html">Web1</a></li>
                         <li class="nav-item"><a href="static/birthday-funny/index.html">Web2</a></li>
 			            <li class="nav-item"><a href="static/tou/index.html">Web3</a></li>
